--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "vibe-react",
-  "version": "1.0.2",
-  "description": "Vibe Dashboard React Theme",
+  "name": "elogbookfkui-dashboard",
+  "version": "0.0.1",
+  "description": "Elogbook Dashboard",
   "author": "Nice Dash",
-  "homepage": "http://nicedash.com",
-  "copyright": "Copyright 2019 Nice Dash",
+  "homepage": "https://dashboard-beta.elogbookfkui.com",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
@@ -17,7 +16,7 @@
     "react-dom": "^16.8.1",
     "react-feather": "^1.1.6",
     "react-fontawesome": "1.6.1",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.3",
     "reactstrap": "6.4.0"
   },
