--- a/package.json
+++ b/package.json
@@ -6,21 +6,37 @@
   "homepage": "https://dashboard-beta.elogbookfkui.com",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-core": "^2.7.5",
+    "@devexpress/dx-react-grid": "^2.7.5",
+    "@devexpress/dx-react-grid-bootstrap3": "^2.7.5",
+    "@devexpress/dx-react-grid-bootstrap4": "^2.7.5",
+    "@devexpress/dx-react-grid-material-ui": "^2.7.5",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@syncfusion/ej2-react-grids": "^19.1.65",
     "@trendmicro/react-sidenav": "^0.5.0",
     "bootstrap": "^4.3.1",
-    "chart.js": "^2.7.3",
+    "chart.js": "^2.9.4",
     "classnames": "^2.2.6",
     "font-awesome": "^4.7.0",
+    "material-table": "^1.69.3",
     "node-sass": "^4.14.1",
     "react": "^16.14.0",
     "react-chartjs-2": "2.6.4",
     "react-date-picker": "^8.0.3",
+    "react-datepicker": "^4.0.0",
     "react-dom": "^16.8.1",
     "react-feather": "^1.1.6",
     "react-fontawesome": "1.6.1",
+    "react-multi-select-component": "^4.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.3",
+    "react-select": "^4.3.0",
+    "react-select-checked": "^0.1.12",
+    "react-table": "^7.7.0",
+    "react-table-sticky": "^1.1.3",
     "reactstrap": "^8.8.1",
+    "styled-components": "^5.3.0",
     "validator": "^13.5.2"
   },
   "scripts": {
