--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 REACT_APP_MOCK_USER=false
 REACT_APP_MOCK_SERVER=false
-REACT_APP_API_URL=/api
+REACT_APP_API_URL=https://beta.elogbookfkui.com/api
 # https://create-react-app.dev/docs/adding-custom-environment-variables/#what-other-env-files-can-be-used
