--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-select-checked": "^0.1.12",
     "react-table": "^7.7.0",
     "react-table-sticky": "^1.1.3",
+    "reactjs-popup": "^2.0.5",
     "reactstrap": "^8.8.1",
     "styled-components": "^5.3.0",
     "validator": "^13.5.2"
