--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-scripts": "2.1.3",
     "react-select": "^4.3.0",
     "react-select-checked": "^0.1.12",
+    "react-swipeable-views": "^0.14.0",
     "react-table": "^7.7.0",
     "react-table-sticky": "^1.1.3",
     "reactjs-popup": "^2.0.5",
